--- a/doc/03. changelog.md
+++ b/doc/03. changelog.md
@@ -4,6 +4,6 @@
 
 #####  [Order now](https://puqcloud.com/whmcs-module-docker-influxdb.php) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-Docker-InfluxDB/) | [FAQ](https://faq.puqcloud.com/) | [n8n](https://puqcloud.com/link.php?id=117)
 
-##### v1.0 Released 24-03-2025
+### v1.0 Released 24-03-2025
 
 First version
