--- a/doc/04. Installation and configuration guide/01. basic-concepts-and-requirements.md
+++ b/doc/04. Installation and configuration guide/01. basic-concepts-and-requirements.md
@@ -4,26 +4,26 @@
 
 #####  [Order now](https://puqcloud.com/whmcs-module-docker-influxdb.php) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-Docker-InfluxDB/) | [FAQ](https://faq.puqcloud.com/) | [n8n](https://puqcloud.com/link.php?id=117)
 
-<p class="callout info">Before you start, it is important to read and familiarize yourself with the following articles at this link:  
-[https://doc.puq.info/books/docker-modules](https://doc.puq.info/books/docker-modules)</p>
+>Before you start, it is important to read and familiarize yourself with the following articles at this link:  
+[https://doc.puq.info/books/docker-modules](https://doc.puq.info/books/docker-modules)
 
 The **WHMCS Docker InfluxDB module** is part of the **WHMCS Docker module series** developed by **PUQcloud**. This module enables service providers to offer **InfluxDB Docker containers** as a service to their clients, allowing for seamless automation and integration.
 
 The system consists of three core components:
 
-### **🖥️ WHMCS Module**
+### **WHMCS Module**
 
 The **core component**, installed in WHMCS, manages service provisioning and automation from the WHMCS side.
 
-### **📡 Debian 12 Server**
+### **Debian 12 Server**
 
 A server running **Debian 12** with the following pre-installed:  
-✅ **Docker** – For container management  
+**Docker** – For container management  
   
 We have prepared instructions for installing and configuring Docker  
 [https://doc.puq.info/books/docker-modules/page/installing-docker-for-puqcloud-modules](https://doc.puq.info/books/docker-modules/page/installing-docker-for-puqcloud-modules)
 
-### **🔗 n8n Server**
+### **n8n Server**
 
 This server facilitates communication between the WHMCS module and the Docker server, ensuring smooth workflow execution.  
 To explore n8n’s full potential, visit the **[official n8n website](https://n8n.io/)** for documentation, tutorials, and community support.
@@ -32,14 +32,14 @@ To explore n8n’s full potential, visit the **[official n8n website](https://n8
 
 ## **Key Features &amp; Concepts**
 
-### **⚙️ Workflow Automation**
+### **Workflow Automation**
 
 n8n provides a **graphical workflow builder**, allowing users to automate various tasks, such as:  
-✔️ **Sending notifications**  
-✔️ **Configuring firewalls** on external routers  
-✔️ **Managing DNS settings**  
-✔️ **Custom automation processes** tailored to specific needs
+- **Sending notifications**  
+- **Configuring firewalls** on external routers  
+- **Managing DNS settings**  
+- **Custom automation processes** tailored to specific needs
 
-### **🔄 Flexibility &amp; Customization**
+### **Flexibility &amp; Customization**
 
 The module offers **personalized settings** and supports **elastic automation**, giving clients full control over their n8n workflows.
