--- a/doc/04. Installation and configuration guide/02. whmcs-setup-installupdate.md
+++ b/doc/04. Installation and configuration guide/02. whmcs-setup-installupdate.md
@@ -4,7 +4,7 @@
 
 #####  [Order now](https://puqcloud.com/whmcs-module-docker-influxdb.php) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-Docker-InfluxDB/) | [FAQ](https://faq.puqcloud.com/) | [n8n](https://puqcloud.com/link.php?id=117)
 
-<p class="callout info">**Module is coded ionCube v13**</p>
+>**Module is coded ionCube v13**
 
 Supported php version:
 
@@ -12,10 +12,9 @@ Supported php version:
 - php 8.1 WHMCS 8.11.0 +
 - php 8.2 WHMCS 8.11.0 +
 
-<p class="callout info">To install and update a module, you must perform one and the same action.</p>
+>To install and update a module, you must perform one and the same action.
 
-#####   
-1. Download the latest version of the module.
+### 1. Download the latest version of the module.
 
 PHP 8.2
 
@@ -35,12 +34,12 @@ PHP 7.4
 wget http://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-Docker-InfluxDB/php74/PUQ_WHMCS-Docker-InfluxDB-latest.zip
 ```
 
-<p class="callout info">All versions are available via link: [https://download.puqcloud.com/WHMCS/servers/PUQ\_WHMCS-Docker-InfluxDB/](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-Docker-InfluxDB/)</p>
+>All versions are available via link: [https://download.puqcloud.com/WHMCS/servers/PUQ\_WHMCS-Docker-InfluxDB/](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-Docker-InfluxDB/)
 
-##### 2. Unzip the archive with the module.
+### 2. Unzip the archive with the module.
 
 ```Powershell
 unzip PUQ_WHMCS-Docker-InfluxDB-latest.zip
 ```
 
-##### 3. Copy and Replace "puqDockerInfluxDB" from "PUQ\_WHMCS-Docker-InfluxDB" to "WHMCS\_WEB\_DIR/modules/servers/"
+### 3. Copy and Replace "puqDockerInfluxDB" from "PUQ\_WHMCS-Docker-InfluxDB" to "WHMCS\_WEB\_DIR/modules/servers/"
