--- a/doc/06. Admin Area/01. product-information.md
+++ b/doc/06. Admin Area/01. product-information.md
@@ -8,12 +8,12 @@
 
 The **admin panel** is structured into two main sections with additional control buttons for container management.
 
-#### **Control Buttons**
+### **Control Buttons**
 
 - **Container Start / Stop** – Start or stop the running container.
 - **Mount Disk / Unmount Disk** – Attach or detach the container's disk to the host system. This modifies the **fstab** file to ensure proper mounting.
 
-#### **Container Status &amp; Resource Monitoring**
+### **Container Status &amp; Resource Monitoring**
 
 - **Status** – Displays the current state (Running / Stopped).
 - **Name** – Unique identifier and domain of the container.
@@ -24,7 +24,7 @@ The **admin panel** is structured into two main sections with additional control
 - **Network IO** – Shows network traffic statistics.
 - **Log Button** – Loads and displays the container logs for debugging and monitoring.
 
-#### **Application Information**
+### **Application Information**
 
 - **Version** – Displays the installed application version.
 
