--- a/doc/01. description.md
+++ b/doc/01. description.md
@@ -4,8 +4,8 @@
 
 #####  [Order now](https://puqcloud.com/whmcs-module-docker-influxdb.php) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-Docker-InfluxDB/) | [FAQ](https://faq.puqcloud.com/) | [n8n](https://puqcloud.com/link.php?id=117)
 
-<p class="callout info">Before you start, it is important to read and familiarize yourself with the following articles at this link:  
-[https://doc.puq.info/books/docker-modules](https://doc.puq.info/books/docker-modules)</p>
+>Before you start, it is important to read and familiarize yourself with the following articles at this link:  
+[https://doc.puq.info/books/docker-modules](https://doc.puq.info/books/docker-modules)
 
 The **WHMCS Docker InfluxDB module** is designed for automated provisioning and management of **InfluxDB instances on a Docker server. It seamlessly integrates with WHMCS, allowing businesses to sell and manage **InfluxDB services efficiently.
 
@@ -13,12 +13,12 @@ The **WHMCS Docker InfluxDB module** is designed for automated provisioning and 
 
 ## **Key Features**
 
-### **🚀 Automated Container Management**
+### **Automated Container Management**
 
 - Automatic creation of an **InfluxDB container upon service order.
 - Automated package upgrades and administrator password reset.
 
-### **🔒 Service Control &amp; Security**
+### **Service Control &amp; Security**
 
 - Service creation
 - Service suspension and reactivation.
@@ -26,15 +26,15 @@ The **WHMCS Docker InfluxDB module** is designed for automated provisioning and 
 - Full reinstallation
 - IP access control
 
-### **🛠️ Advanced Diagnostic Tools**
+### **Advanced Diagnostic Tools**
 
 - Built-in tools for diagnosing and managing containers.
 
-### **🌍 Multilingual Support**
+### **Multilingual Support**
 
 - Supports multiple languages, including **Arabic, Azerbaijani, Catalan, Chinese, Croatian, Czech, Danish, Dutch, English, Estonian, Farsi, French, German, Hebrew, Hungarian, Italian, Macedonian, Norwegian, Polish, Romanian, Russian, Spanish, Swedish, Turkish, and Ukrainian**.
 
-### **⚙️ Fully Customizable Workflows**
+### **Fully Customizable Workflows**
 
 - Uses **n8n workflows** to automate processes, allowing full customization for business-specific needs.
 
@@ -43,31 +43,31 @@ The **WHMCS Docker InfluxDB module** is designed for automated provisioning and 
 ## **System Requirements**
 
 To run the WHMCS Docker **InfluxDB** module, ensure you have:  
-✅ **WHMCS version 8+**  
-✅ **An n8n server** for workflow automation  
-✅ **A server with Docker installed** for container management ([Installation Guide](https://doc.puq.info/books/docker-modules/page/installing-docker-for-puqcloud-modules))
+- **WHMCS version 8+**  
+- **An n8n server** for workflow automation  
+- **A server with Docker installed** for container management ([Installation Guide](https://doc.puq.info/books/docker-modules/page/installing-docker-for-puqcloud-modules))
 
 - - - - - -
 
 ## **Installation &amp; Setup**
 
-### **1️⃣ Environment Preparation**
+### **Environment Preparation**
 
 - Install **WHMCS 8+**.
 - Set up an **n8n server** for automation workflows.
 - Ensure **Docker** is installed and running. ([Installation Guide](https://doc.puq.info/books/docker-modules/page/installing-docker-for-puqcloud-modules))
 
-### **2️⃣ Module Installation**
+### **Module Installation**
 
 - Upload and activate the **WHMCS Docker InfluxDB module**.
 - Configure the module settings to connect with your Docker server and n8n workflows.
 
-### **3️⃣ Workflow Customization**
+### **Workflow Customization**
 
 - Utilize **n8n workflows** to automate service provisioning and management.
 - Modify workflows as needed for custom business logic.
 
-### **4️⃣ Testing &amp; Deployment**
+### **Testing &amp; Deployment**
 
 - Perform a **test order** to verify automatic container creation.
 - Check all service management functions (creation, suspension, unsuspension, termination).
@@ -76,13 +76,13 @@ To run the WHMCS Docker **InfluxDB** module, ensure you have:
 
 ## **Why Choose This Module?**
 
-✅ **Seamless automation** – Reduces manual work and speeds up service deployment.  
-✅ **Highly customizable** – Modify workflows to fit any business model.  
-✅ **User-friendly** – Integrated within WHMCS with a simple setup process.
+- **Seamless automation** – Reduces manual work and speeds up service deployment.  
+- **Highly customizable** – Modify workflows to fit any business model.  
+- **User-friendly** – Integrated within WHMCS with a simple setup process.
 
 - - - - - -
 
-This module makes selling and managing **InfluxDB instances** through WHMCS easy, automated, and flexible! 🚀
+This module makes selling and managing **InfluxDB instances** through WHMCS easy, automated, and flexible! 
 
 [![image-1742768439769.png](https://doc.puq.info/uploads/images/gallery/2025-03/scaled-1680-/image-1742768439769.png)](https://doc.puq.info/uploads/images/gallery/2025-03/image-1742768439769.png)
 
