--- a/doc/04. Installation and configuration guide/06. product-configuration.md
+++ b/doc/04. Installation and configuration guide/06. product-configuration.md
@@ -4,7 +4,7 @@
 
 #####  [Order now](https://puqcloud.com/whmcs-module-docker-influxdb.php) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-Docker-InfluxDB/) | [FAQ](https://faq.puqcloud.com/) | [n8n](https://puqcloud.com/link.php?id=117)
 
-##### Add new product to WHMCS
+### Add new product to WHMCS
 
 ```
 System Settings->Products/Services->Create a New Product
@@ -20,8 +20,6 @@ In the **Module settings** section, select the **"PUQ Docker InfluxDB"** module
 - **Main domain** – defines the primary domain for the web interface of the application. If not set, the main domain will be taken from the **hostname** parameter in the server settings.
 - **Subdomain** – a personal subdomain assigned to each service. If left empty or if the subdomain is already taken, it will be automatically generated in the format **{user\_id}-{service\_id}**.
 - ### Supported Macros for **App Subdomain**:
-    
-    
     - **{user\_id}** – Client ID
     - **{service\_id}** – Service ID
     - **{random\_digit\_x}** – Random number (x defines the length)
