--- a/doc/04. Installation and configuration guide/08. email-template-puqdockerinfluxdb-welcome-email.md
+++ b/doc/04. Installation and configuration guide/08. email-template-puqdockerinfluxdb-welcome-email.md
@@ -4,7 +4,7 @@
 
 #####  [Order now](https://puqcloud.com/whmcs-module-docker-influxdb.php) | [Download](https://download.puqcloud.com/WHMCS/servers/PUQ_WHMCS-Docker-InfluxDB/) | [FAQ](https://faq.puqcloud.com/) | [n8n](https://puqcloud.com/link.php?id=117)
 
-##### Create an email template for customer notifications.
+### Create an email template for customer notifications.
 
 ```
 System Settings->Email Templates->Create New Email Template
